@@ -15,6 +15,10 @@ NOTE: Do not "tidy" or change the indenting here, or we break svn annotate
     - Updated German and Turkish translation (Zeno Gantner and Burak Gürsoy)
     - Added licensing information to About dialog (Zeno Gantner)
     - Skip '.' when indexing installed modules in @INC (dam)
+    - Fixed ticket #896: search term is not remembered after saving the file
+      (Sam Crawley)
+    - Added file type filter "script file" (which includes Unix shell scripts
+      and Windows .bat files) to the Open dialog (Zeno Gantner)
 
 0.59 2010.03.31 
     - Don't crash open file list dialog on unsaved files or without
